--- a/sim/common/ChangeLog
+++ b/sim/common/ChangeLog
@@ -1,3 +1,11 @@
+2003-06-04  Michael Snyder  <msnyder@redhat.com>
+
+	* common/run.c (main): Remove SIM_H8300 ifdef.
+	(usage): Ditto.
+	* common/sim-options.c (STANDARD_OPTIONS): Add SIM_H8300SX.
+	(standard_options): Add '-x' for h8/300sx.
+	(standard_option_handler): Add case for SIM_H8300SX.
+
 2003-04-13  Michael Snyder  <msnyder@redhat.com>
 
 	* Make-common.in (sim-events.o, sim-config.o): Depend on sim-main.h.
