--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-05  Michal Ludvig  <mludvig@suse.cz>
+
+	* x86-64-tdep.c (x86_64_push_arguments): Don't clear offset
+	in each pass.
+
 2003-06-05  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* thread-db.c (check_event): For create/death event breakpoints,
