--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-06  Michal Ludvig  <mludvig@suse.cz>
+
+	* x86-64-tdep.c (x86_64_fill_fxsave): Pass correct regnums 
+	to regcache_collect().
+
 2003-06-05  J. Brobecker  <brobecker@gnat.com>
 
 	* hppa-hpux-tdep.c (hppa_hpux_init_abi): New function, setting
