--- a/gdb/doc/ChangeLog
+++ b/gdb/doc/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-08  Andrew Cagney  <cagney@redhat.com>
+
+	* gdbint.texinfo (Target Architecture Definition): Document
+	"unwind_sp".  Cross reference "unwind_sp" and TARGET_READ_SP.
+
 2003-06-07  Adam Fedor  <fedor@gnu.org>
 
 	* gdb.texinfo: Add Objective-C documentation.
