--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,13 @@
+2003-06-09  Andrew Cagney  <cagney@redhat.com>
+
+	* printcmd.c (print_frame_nameless_args): Moved to "stack.c".
+	(print_frame_args): Moved to "stack.c".
+	* stack.c: Include "gdb_assert.h".
+	(print_frame_nameless_args): Moved from "printcmd.c", made static.
+	(print_frame_args): Moved from "printcmd.c".
+	* frame.h (print_frame_args): Delete declaration.
+	* Makefile.in (stack.o): Update dependencies.
+
 2003-06-08  Andrew Cagney  <cagney@redhat.com>
 
 	* frame.c (get_prev_frame): Remove reference to
